--- a/todo.txt
+++ b/todo.txt
@@ -14,11 +14,11 @@
 Задачи
 
 [x]     Создайте базы данных для разработки и развернутого приложения
-[ ]     Создайте в базе данных таблицу urls с полями id, name и created_at
-[ ]     В корне проекта создайте SQL-файл с таблицей и назовите его database.sql
-[ ]     Реализуйте форму ввода адреса на главной странице и обработчик, который добавляет введенную информацию в базу данных
-[ ]     Не забудьте, что имя поля ввода input должно быть url
+[x]     Создайте в базе данных таблицу urls с полями id, name и created_at
+[x]     В корне проекта создайте SQL-файл с таблицей и назовите его database.sql
+[x]     Реализуйте форму ввода адреса на главной странице и обработчик, который добавляет введенную информацию в базу данных
+[x]     Не забудьте, что имя поля ввода input должно быть url
 [ ]     Реализуйте валидацию для введенного URL-адреса. У URL обязательно должен быть валидный адрес, не превышающий 255 символов
-[ ]     Реализуйте вывод конкретного введенного URL на отдельной странице urls/<id>
+[x]     Реализуйте вывод конкретного введенного URL на отдельной странице urls/<id>
 [ ]     Реализуйте вывод всех добавленных URL на отдельной странице /urls и проверьте, что новые записи отображаются первыми
 [ ]     Задеплойте результат
