Update app.py url_id.html urls.html todo.txt

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,7 @@
 [x]     У таблицы со списком адресов должен быть атрибут data-test="urls"
 [x]     У таблицы с информацией об адресе должен быть атрибут data-test="url"
 [x]     Таблица с проверками должна содержать атрибут data-test="checks"
-[ ]     SQL-файл с созданными таблицами должен называться database.sql
+[x]     SQL-файл с созданныи таблицами должен называться database.sql
 
 Задачи
 
@@ -18,7 +18,7 @@
 [x]     В корне проекта создайте SQL-файл с таблицей и назовите его database.sql
 [x]     Реализуйте форму ввода адреса на главной странице и обработчик, который добавляет введенную информацию в базу данных
 [x]     Не забудьте, что имя поля ввода input должно быть url
-[ ]     Реализуйте валидацию для введенного URL-адреса. У URL обязательно должен быть валидный адрес, не превышающий 255 символов
+[x]     Реализуйте валидацию для введенного URL-адреса. У URL обязательно должен быть валидный адрес, не превышающий 255 символов
 [x]     Реализуйте вывод конкретного введенного URL на отдельной странице urls/<id>
-[ ]     Реализуйте вывод всех добавленных URL на отдельной странице /urls и проверьте, что новые записи отображаются первыми
+[x]     Реализуйте вывод всех добавленных URL на отдельной странице /urls и проверьте, что новые записи отображаются первыми
 [ ]     Задеплойте результат
